# sigil

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml  tag.yml
crates/sigil-core/: Cargo.toml
crates/sigil-core/src/: error.rs  lib.rs  manager.rs
crates/valt-core/: Cargo.toml
crates/valt-core/src/: generator.rs  manager.rs  secret.rs  vault_data.rs
packaging/aur/: PKGBUILD.tmpl
packaging/homebrew/: valt.rb.tmpl
src/: cli.rs  main.rs
src/core/: error.rs  generator.rs  manager.rs  mod.rs  vault_data.rs
src/tui/: app.rs  events.rs  mod.rs
src/tui/views/: detail.rs  form.rs  help.rs  list.rs  mod.rs  unlock.rs
