[workspace]
members = [
    "crates/valt-core",
]
resolver = "2"

[package]
name = "valt"
version = "0.1.0"
edition = "2021"
description = "A keyboard-driven terminal password manager — encrypted, offline, no cloud"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/jbgriesner/valt"

[[bin]]
name = "valt"
path = "src/main.rs"

[dependencies]
valt-core = { path = "crates/valt-core", version = "0.1.0" }
serdevault  = "0.2"
ratatui     = "0.29"
crossterm   = "0.28"
arboard     = "3"
uuid        = { version = "1", features = ["v4"] }
