[package]
name = "sigil-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serdevault    = "0.2"
serde         = { version = "1", features = ["derive"] }
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
rand          = "0.8"
thiserror     = "1"
zeroize       = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
