[package]
name = "valt-core"
version = "0.1.0"
edition = "2021"
description = "Core library for valt — secret management, vault I/O and password generation"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/jbgriesner/valt"

[dependencies]
serdevault    = "0.2"
serde         = { version = "1", features = ["derive"] }
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
rand          = "0.8"
thiserror     = "1"
zeroize       = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
